--- a/src/main/resources/AjouterConcours.fxml
+++ b/src/main/resources/AjouterConcours.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -12,7 +12,6 @@
    <children>
       <TextField fx:id="txtprix" layoutX="89.0" layoutY="164.0" />
       <TextField fx:id="txtlien" layoutX="89.0" layoutY="209.0" />
-      <ChoiceBox fx:id="ChoiceType" layoutX="89.0" layoutY="113.0" prefWidth="150.0" />
       <Button fx:id="confirm" layoutX="262.0" layoutY="251.0" mnemonicParsing="false" onAction="#ajouterconcours" styleClass="add-btn" text="Confirm" />
       <Label layoutX="35.0" layoutY="213.0" text="Lien:">
          <font>
@@ -43,5 +42,6 @@
          </font>
       </Label>
       <TextField fx:id="txtMaxparticipant" layoutX="372.0" layoutY="164.0" />
+      <ComboBox fx:id="ChoiceType" layoutX="90.0" layoutY="115.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
